--- a/T1A08-MotorDriver-MichaelC.html
+++ b/T1A08-MotorDriver-MichaelC.html
@@ -179,35 +179,35 @@ Get this from the settings area when logged into <a href="http://spark.io">http:
 
 
 
-<input type="button" value="a1-read" onClick="{
+<input type="button" value="a1-send-0" onClick="{
     sendToSpark('a1-read')
 }"><br>
 
 
 
-<input type="button" value="a4-send-0" onClick="{
-    sendToSpark('a4-send-0')
-}">
-
-
-<input type="button" value="a4-send-255" onClick="{
-    sendToSpark('a4-send-255')
-}">
     
-<input type="button" value="a1-send-0 (Stop)" onClick="{
+<input type="button" value="a4-send-0 (Stop)" onClick="{
     sendToSpark('a4-send-0')
 }">
 
-<input type="button" value="a1-send-70 (Some Speed)" onClick="{
+<input type="button" value="a4-send-50 (Some Speed)" onClick="{
+    sendToSpark('a4-send-50')
+}">
+
+<input type="button" value="a4-send-150 (more speed)" onClick="{
+    sendToSpark('a4-send-150')
+}">
+
+<input type="button" value="a4-send-255 (full Speed)" onClick="{
     sendToSpark('a1-send-255')
 }">
 
-<input type="button" value="d0-send-1 (Clockwise)" onClick="{
-    sendToSpark('d0-send-1')
+<input type="button" value="d4-send-1 (Clockwise)" onClick="{
+    sendToSpark('d4-send-1')
 }">
 
-<input type="button" value="d0-send-0 (CounterClockwise)" onClick="{
-    sendToSpark('d0-send-0')
+<input type="button" value="d4-send-0 (CounterClockwise)" onClick="{
+    sendToSpark('d4-send-0')
 }">
 
 
